failed first tries & some small scale tests

--- a/colorChecker/index.html
+++ b/colorChecker/index.html
@@ -7,7 +7,7 @@
         <h1>This is a page to check if a color exists or not</h1>
         <h2>Type the name or the hex code of the color below and see if it exists</h2>
         <form action="/scripts/colorChecker.py" method="post">
-            <input type="text" id="color" name="color">
+            <input type="text" id="user_color" name="user_color">
             <input type="submit" value="Send">
         </form>
     </body>
